Fixed various dark mode color issues, and combined css files

--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@
     --ternary: #0f6847;
     --textPrimary: black;
     --textSeconday: white;
+    --cardColor: white;
 }
 
 /*@media (prefers-color-scheme: dark) {
@@ -30,6 +31,7 @@
     --ternary: #0f6847;
     --textPrimary: white;
     --textSeconday: black;
+    --cardColor: rgb(25, 25, 25);
     background-color: Canvas;
     color-scheme: light dark;
 }
@@ -267,7 +269,8 @@ p {
     height: 18rem;
     border-style: solid;
     border-width: 2px 2px;
-    background-color: white;
+    background-color: var(--cardColor);
+    color: var(--textPrimary);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -275,6 +278,7 @@ p {
 
 .centerText {
     text-align: center;
+    color: var(--textPrimary);
 }
 
 .pageCard {
@@ -345,7 +349,8 @@ input[type=submit]:hover {
     margin: auto;
     margin-top: 3%;
     border-radius: 5px;
-    background-color: #f2f2f2;
+    background-color: var(--cardColor);
+    color: var(--textPrimary);
     padding: 20px;
     font-size: 20px;
 }
@@ -369,9 +374,62 @@ input[type=submit]:hover {
     }
 }
 
-
 .invalid {
     animation: shake 0.2s ease-in-out 0s 2;
     box-shadow: 0 0 0.6rem #ff0000;
 }
-  
+
+#cardcontainer {
+    padding-top: 3%;
+    display: block;
+    margin: auto;
+    perspective: 1000px;
+    width: 41.75rem;
+    height: 25rem;
+    position: relative;
+}
+
+#card {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    transform-style: preserve-3d;
+    transition: transform 0.2s; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-style: solid;
+    border-width: 2px 2px;
+}
+
+#cardfront {
+    backface-visibility: hidden; 
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: var(--cardColor);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#cardback {
+    backface-visibility: hidden;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: var(--cardColor);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transform: rotateX(180deg); 
+}
+
+#card.flip {
+    transform: rotateX(180deg);
+}
+
+#cardtext {
+    text-align: center;
+    flex: 0 0 35rem;
+}
